fix(WhoIsActive): add missing border-color (#1195)
* fix(WhoIsActive): add missing border-color

follow #1194

* fix(WhoIsActive): add missing border-color

follow #1194

--- a/src/WhoIsActive-pagestyles/WhoIsActive-pagestyles.less
+++ b/src/WhoIsActive-pagestyles/WhoIsActive-pagestyles.less
@@ -34,6 +34,16 @@
 		color: @color--warning !important;
 	}
 
+	&__ThisSeason {
+		border-color: @color--orange;
+		color: @color--orange !important;
+	}
+
+	&__ThisSemiyear {
+		border-color: @color--purple;
+		color: @color--purple !important;
+	}
+
 	&__OverAYear {
 		border-color: @color--error;
 		color: @color--error !important;
